--- a/392686006/my_chat_journal/pubspec.yaml
+++ b/392686006/my_chat_journal/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.4+4
   flutter_slidable: ^1.1.0
+  shared_preferences: ^2.0.9
+  sqflite: ^2.0.1
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
