--- a/479714125/chat_diary/pubspec.yaml
+++ b/479714125/chat_diary/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.0.0
   bloc: ^8.0.1
   equatable: ^2.0.3
+  shared_preferences: ^2.0.11
 
 
   cupertino_icons: ^1.0.2
