--- a/479714125/chat_diary/pubspec.yaml
+++ b/479714125/chat_diary/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   bloc: ^8.0.1
   equatable: ^2.0.3
   shared_preferences: ^2.0.11
-
-
+  path: ^1.8.0
+  sqflite: ^2.0.1
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   image_picker: ^0.8.4+4
