--- a/348699254/chat_journal/android/app/build.gradle
+++ b/348699254/chat_journal/android/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.chat_journal"
+        applicationId "ua.wtf.chat_journal"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
