--- a/348699254/chat_journal/pubspec.yaml
+++ b/348699254/chat_journal/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   path: ^1.8.0
   uuid: ^3.0.5
   shared_preferences: ^2.0.9
+  firebase_core: ^1.10.2
+  firebase_database: ^9.0.0-dev.0
+  local_auth: ^1.1.7
+  firebase_auth: ^3.3.0
+  cloud_firestore: ^3.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
