--- a/882461183/pubspec.yaml
+++ b/882461183/pubspec.yaml
@@ -34,13 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  english_words: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   font_awesome_flutter: ^9.2.0
-  fluttertoast: ^8.0.8
+  intl: ^0.17.0
+  image_picker: ^0.8.4+4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
