--- a/348699254/chat_journal/pubspec.yaml
+++ b/348699254/chat_journal/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   local_auth: ^1.1.7
   firebase_auth: ^3.3.0
   cloud_firestore: ^3.1.4
+  splash_screen_view: ^3.0.0
+  flutter_share: ^2.0.0
+  hashtagable: ^2.0.2+1
+  logger: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
