--- a/269245322/pubspec.yaml
+++ b/269245322/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  toggle_switch: ^1.3.0
+  bloc: ^8.0.0
+  flutter_bloc: ^8.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
