--- a/348699254/chat_journal/pubspec.yaml
+++ b/348699254/chat_journal/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   logger: ^1.1.0
   lottie: ^1.2.1
   rive: ^0.8.1
+  show_up_animation: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
