--- a/269245322/pubspec.yaml
+++ b/269245322/pubspec.yaml
@@ -29,14 +29,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
+  path:
   toggle_switch: ^1.3.0
   bloc: ^8.0.0
   flutter_bloc: ^8.0.0
+  flutter_slidable: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
