--- a/599207837/pubspec.yaml
+++ b/599207837/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   swipe_to: ^0.1.0-nullsafety.1
+  sqflite: ^2.0.2
+  path_provider: ^2.0.8
+  shared_preferences: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
