--- a/479714125/chat_diary/pubspec.yaml
+++ b/479714125/chat_diary/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   image_picker: ^0.8.4+4
+  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
 
 
 dev_dependencies:
