--- a/479714125/chat_diary/pubspec.yaml
+++ b/479714125/chat_diary/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker: ^0.8.4+4
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
+  firebase_database: ^9.0.5
 
 
 dev_dependencies:
