--- a/479714125/chat_diary/pubspec.yaml
+++ b/479714125/chat_diary/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
   firebase_database: ^9.0.5
+  firebase_storage: ^10.2.5
 
 
 dev_dependencies:
