--- a/619740324.01/pubspec.yaml
+++ b/619740324.01/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   path: ^1.8.0
   shared_preferences: ^2.0.11
   sqflite: ^2.0.1
+  firebase_core: ^1.11.0
+  firebase_database: ^9.0.5
+  firebase_auth: ^3.3.5
+  local_auth: ^1.1.7
+  image_picker: ^0.8.4+5
+  path_provider: ^2.0.8
+  cloud_firestore: ^3.1.6
+  firebase_storage: ^10.2.5
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
