--- a/269245322/pubspec.yaml
+++ b/269245322/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.11
+  firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.7
+  firebase_database: ^9.0.6
+  file_picker: ^4.3.3
+  firebase_storage: ^10.2.6
+  firebase_auth: ^3.3.6
+  firebase_database_web: ^0.2.0+5
 
 dev_dependencies:
   flutter_test:
