--- a/882461183/pubspec.yaml
+++ b/882461183/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
   shared_preferences: ^2.0.12
+  firebase_core: ^1.12.0
+  firebase_database: ^9.0.6
+  firebase_storage: ^10.2.6
+  local_auth: ^1.1.10
+  firebase_auth: ^3.3.6
+  cloud_firestore: ^3.1.7
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +53,7 @@ dev_dependencies:
   sqflite: ^2.0.2
   path: ^1.8.0
   path_provider: ^2.0.8
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
