--- a/619740324.01/pubspec.yaml
+++ b/619740324.01/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.0.0
+  flutter_bloc:
   intl: ^0.17.0
   path: ^1.8.0
   shared_preferences: ^2.0.11
@@ -48,6 +48,10 @@ dependencies:
   cloud_firestore: ^3.1.6
   firebase_storage: ^10.2.5
   uuid: ^3.0.5
+  share_plus: ^3.0.4
+  hashtagable: ^2.0.2+1
+  provider: ^5.0.0
+  animated_splash_screen: ^1.1.0
 
 dev_dependencies:
   flutter_test:
