--- a/619740324.01/pubspec.yaml
+++ b/619740324.01/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   hashtagable: ^2.0.2+1
   provider: ^5.0.0
   animated_splash_screen: ^1.1.0
+  page_transition: ^2.0.5
+  lottie: ^1.2.2
+  auto_animated: ^3.0.1
 
 dev_dependencies:
   flutter_test:
