--- a/882461183/pubspec.yaml
+++ b/882461183/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_native_splash: ^2.0.2
   flutter_share: ^2.0.0
   linkfy_text: ^1.1.5
+  lottie: ^1.2.2
 
 flutter_native_splash:
   color: "#ffffff"
@@ -81,6 +82,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+   - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
