--- a/619740324.01/pubspec.yaml
+++ b/619740324.01/pubspec.yaml
@@ -55,8 +55,19 @@ dependencies:
   page_transition: ^2.0.5
   lottie: ^1.2.2
   auto_animated: ^3.0.1
+  charts_flutter: ^0.12.0
+  bloc_test: ^8.5.0
+  mocktail: ^0.2.0
+  equatable: ^2.0.3
+  vm_service: ^7.1.1
+  firebase_database_mocks: ^0.3.2
+  firebase_storage_mocks: ^0.5.0
+
 
 dev_dependencies:
+  test: 1.17.10
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
